@@ -1,3 +1,10 @@
+TAG: nomenload-6-0-4-2
+DATE: 07/11/2016
+STAFF: sc
+CHANGES: TR12313
+1) updateMkrType.csh, updateMkrType.py - updated for postgres, rejiggered a bit 
+   and updated config vars that no longer exist
+
 TAG: nomenload-6-0-4-1
 DATE: 06/16/2016
 STAFF: lec 
